# py_dlt_client

./: .gitignore  README.md  pyproject.toml
.specify/: feature.json  integration.json
.specify/integrations/: codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
docs/: api.md  dlt-scope.md  reference-comparison.md
specs/001-dlt-tcp-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-cli-terminal/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/py_dlt_client/: __init__.py  __main__.py  cli.py  client.py  constants.py  exceptions.py  filters.py  formatter.py  frame_reader.py  headers.py  models.py  payload_verbose.py
tests/: conftest.py
tests/fixtures/: dlt_frames.py
tests/integration/: cli_runner.py  tcp_harness.py  test_cli_diagnostics.py  test_cli_filter_stream.py  test_cli_reconnect.py  test_cli_stream.py  test_decode_and_format_stream.py  test_iterator_lifecycle.py  test_receive_structured.py  test_reconnect_callbacks.py
tests/unit/: test_cli_args.py  test_cli_errors.py  test_cli_filters.py  test_error_modes.py  test_filters.py  test_formatter.py  test_frame_errors.py  test_frame_reader.py  test_headers_extended.py  test_headers_standard.py  test_logging.py  test_payload_bool_float.py  test_payload_int.py  test_payload_raw_unsupported.py  test_payload_string.py  test_public_api.py
tests/windows/: cleanup_helpers.py  test_socket_cleanup.py  (+1 more)
(+5 files in other folders)
