[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-dlt-client"
version = "0.1.0"
description = "Pure Python DLT V1 TCP receiver/parser for Windows"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "py_dlt_client contributors" }
]
dependencies = []

[project.scripts]
py-dlt-client = "py_dlt_client.cli:main"

[project.optional-dependencies]
test = [
  "pytest>=8"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers --strict-config"
filterwarnings = [
  "error"
]
